# sevens

./: .gitignore  Cargo.toml  README.md  build_x86linuxgnu.sh  buildpgo_x86linuxgnu.sh  run_x86linuxgnu.sh
.cargo/: config.toml
src/: main.rs
src/cards/: card.rs  card_collection.rs  deck.rs  mod.rs  print.rs
src/game/: mod.rs  play.rs  results.rs  state.rs  strategy.rs
src/numformat/: mod.rs
src/play/: mod.rs  play.rs  player.rs  results.rs  state.rs
