[package]
name = "sevens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rand = "0.8.5"
lazy_static = "1.4.0"
num-format = { version = "0.4.0", features = ["with-system-locale"] }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"

[profile.release]
debug = true
