[package]
name = "sevens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rand = "0.8.5"
lazy_static = "1.4.0"
numformat = { git = "https://github.com/andywarduk/numformat.git" }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
colored = "2"
terminal_size = "0.3.0"
simple-process-stats = "1.0.0"

[profile.release]
debug = true
lto = true

[features]
trace = []
nostats = []
